<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoyarDroid</string>
    <string name="quick_recipe">Quick Recipe</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quck_recipe">QuckRecipe</string>
    <string name="title_activity_quick_recipe">QuickRecipe</string>
    <string name="find_recipe">Find Recipes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_fridge">Fridge</string>
    <string name="fridge_button">Fridge</string>
    <string name="dinner_button">Dinner</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="lunch_button">Lunch</string>
    <string name="user_button">User text</string>
    <string name="addIngredient_button">Add Ingredient</string>
    <string name="removeIngredient_button">Remove Ingredient</string>
    <string name="favoriteRecipe_button">Favorite Recipes</string>
    <string name="title_activity_fruit">Fruit</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="lemon">Lemon</string>
    <string name="lime">Lime</string>
    <string name="blueberry">Blueberry</string>
    <string name="grape">Grape</string>
    <string name="orange">Orange</string>
    <string name="bacon">Bacon</string>
    <string name="bologna">Bologna</string>
    <string name="chicken">Chicken</string>
    <string name="clam">Clam</string>
    <string name="crab">Crab</string>
    <string name="crawfish">Crawfish</string>
    <string name="eggs">Eggs</string>
    <string name="ground_beef">Ground Beef</string>
    <string name="ham">Ham</string>
    <string name="lamb">Lamb</string>
    <string name="lobster">Lobster</string>
    <string name="oyster">Oyster</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="pork">Pork</string>
    <string name="sausage">Sausage</string>
    <string name="scallop">Scallop</string>
    <string name="shrimp">Shrimp</string>
    <string name="solami">Solami</string>
    <string name="steak">Steak</string>
    <string name="turkey">Turkey</string>
    <string name="meat">Meat</string>
    <string name="avocado">Avocado</string>
    <string name="beet">Beet</string>
    <string name="blackolive">Black Olive</string>
    <string name="brocolli">Brocolli</string>
    <string name="carrot">Carrot</string>
    <string name="cauliflolwer">Cauliflower</string>
    <string name="celery">Celery</string>
    <string name="corn">Corn</string>
    <string name="cucumber">Cucumber</string>
    <string name="eggplant">Eggplant</string>
    <string name="garlic">Garlic</string>
    <string name="ginger">Ginger</string>
    <string name="greenbean">Green Bean</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="lettuce">Lettuce</string>
    <string name="olive">Olive</string>
    <string name="onion">Onion</string>
    <string name="peas">Peas</string>
    <string name="pepper">Pepper</string>
    <string name="pickle">Pickle</string>
    <string name="potato">Potato</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="radish">Radish</string>
    <string name="spinach">Spinach</string>
    <string name="squash">Squash</string>
    <string name="tomato">Tomato</string>
    <string name="yam">Yam</string>
    <string name="zuchini">Zuchini</string>
    <string name="vegetable">Vegetable</string>
    <string name="dairy">Dairy</string>
    <string name="grain">Grain</string>
    <string name="spice">Spice</string>
    <string name="title_activity_meat">Meat</string>
    <string name="title_activity_vegetable">Vegetable</string>
    <string name="title_activity_grain">Grain</string>
    <string name="title_activity_dairy">Dairy</string>
    <string name="title_activity_spice">Spice</string>

</resources>
