<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     
    tools:context=".Quick Recipe" >

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="400dip"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="404dp" >

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <CheckBox
	            android:id="@+id/apple"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/apple_button"
	            android:text="@string/apple"
	            android:textColor="@android:color/white" />

	        <CheckBox
	            android:id="@+id/banana"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/banana_button"
	            android:text="@string/banana"
	            android:textColor="@android:color/black" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <CheckBox
	            android:id="@+id/orange"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/orange_button"
	            android:text="@string/orange"
	            android:textColor="@android:color/white" />

	        <CheckBox
	            android:id="@+id/lemon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/lemon_button"
	            android:text="@string/lemon"
	            android:textColor="@android:color/white" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <CheckBox
	            android:id="@+id/lime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/lime_button"
	            android:text="@string/lime"
	            android:textColor="@android:color/black" />

	        <CheckBox
	            android:id="@+id/blueberry"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/blueberry_button"
	            android:text="@string/blueberry"
	            android:textColor="@android:color/white" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <CheckBox
	            android:id="@+id/grape"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/grape_button"
	            android:text="@string/grape"
	            android:textColor="@android:color/black" />

	    </TableRow>
	</TableLayout>
</ScrollView>

<Button
    android:id="@+id/findRecipes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginRight="24dp"
    android:layout_toLeftOf="@+id/add"
    android:text="Find Recipes" />

<Button
    android:id="@+id/add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_marginRight="34dp"
    android:text="Add to List" />

</RelativeLayout>